--- a/templates/clientOAuth.html
+++ b/templates/clientOAuth.html
@@ -11,7 +11,10 @@
 <script>
     gapi.load('auth2', function() {
       auth2 = gapi.auth2.init({
-        client_id: '608638038963-1l3ubfmo1h8uoatkp7r2ksenfl5igton.apps.googleusercontent.com',
+        client_id: '695651188306-abo5gcs00d2pbakhe4akmm30ime556q5.apps.googleusercontent.com',
+        
+        //608638038963-1l3ubfmo1h8uoatkp7r2ksenfl5igton.apps.googleusercontent.com
+
         // Scopes to request in addition to 'profile' and 'email'
         //scope: 'additional_scope'
       });
